# Aquanact

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_web.bat  build_web.sh  vcpkg.json
assets/: ground.fbx
assets/Floor/: floor_6x6.fbx
assets/Office/: bookcase.fbx  books.fbx  chair_03.fbx  chair_fancy.fbx  cieling.fbx  computer.fbx  desk01.fbx  desk_02.fbx  desk_03.fbx  divider_black.fbx  divider_black_02.fbx  divider_black_03.fbx  divider_black_04.fbx  divider_black_05.fbx  divider_black_06.fbx  divider_black_07.fbx  dividers.fbx  dividers_02.fbx  dividers_03.fbx  dividers_04.fbx  dividers_05.fbx  dividers_06.fbx  filecabinet_large.fbx  filecabinet_larger.fbx  filecabinet_largest.fbx  office_chair_blue.fbx  wall.fbx  wall_02.fbx  wall_03.fbx  wall_04.fbx  water_cooler.fbx  water_cooler_bottle.fbx
assets/Office/.mayaSwatches/: cieling.png_hcm.swatch  wall.png_hcm.swatch
assets/Sentinal/: DefaultSentinel.mtl  DefaultSentinelHelm.mtl  Sentinal.fbx
assets/Sentinal/animations/: Sentinal_Idle.fbx  Sentinal_Running.fbx
assets/Sentinal/model/: Sentinal.fbx
assets/Tom/: TommyVercetti (2).fbx
assets/Tom/.mayaSwatches/: player.png_hcm.swatch
assets/Tom/animations/: Neutral Idle.fbx  Running.fbx
include/: Animation.h  Animator.h  Audio.h  Axis.h  Camera.h  Engine.h  GLHeaders.h  Input.h  Level.h  Light.h  Line.h  MathUtils.h  Mesh.h  Object3D.h  Physics.h  PlayerController.h  RenderCommand.h  Renderer.h  ShaderProgram.h  ShadowMap.h  StbImage.h  Texture.h  UI.h  Window.h
models/: Character.fbx  CharacterIdle.fbx  CharacterRun.fbx  Cube.fbx  CubeAnim.fbx  CubeSkinned.fbx  GruntIdle.fbx  Idle.fbx  Ollie.fbx  OllieGeo.fbx  OllieIdle.fbx  SimpleModel.fbx  TestDummy.fbx  Todd.mtl  ToddAnims.fbx  TroopIdle.fbx  TroopWalk.fbx  Xzibit.fbx  arms.fbx  ceiling.fbx  door.fbx  floor.fbx  frontwall.fbx  imp.fbx  logfloor.fbx  lowerroof.fbx  o.fbx  railing.fbx  rot.fbx  sidewall_01.fbx  sidewall_02.fbx  sidewall_03.fbx  storm.fbx  stormFloat.fbx  stormWalk.fbx  troop.fbx  upperroof.fbx  upperroof_wood.fbx  villager.fbx  wall.fbx  (+6 more)
models/.mayaSwatches/: Xzibit.png_hcm.swatch  ground.png_hcm.swatch  imp.png_hcm.swatch  villager.png_hcm.swatch
models/troop.fbm/.mayaSwatches/: rep_inf_ep3Clonetrooper.png_hcm.swatch
models/wall.fbm/.mayaSwatches/: tile_2.png_hcm.swatch
shaders/: phong.frag  phong.vert  shadow.frag  shadow.geom  shadow.vert  shadow_debug.frag  shadow_debug.vert  texture_inverted.frag  texture_perspective.vert  texturing.frag  vertexColor.frag  vertexColor.vert
shaders/web/: phong.frag  phong.vert  shadow.frag  shadow.vert  vertexColor.frag  vertexColor.vert
src/: Animation.cpp  Animator.cpp  Audio.cpp  Axis.cpp  Camera.cpp  Engine.cpp  Input.cpp  Level.cpp  Line.cpp  MathUtils.cpp  Mesh.cpp  Object3D.cpp  Physics.cpp  PlayerController.cpp  Renderer.cpp  ShaderProgram.cpp  ShadowMap.cpp  StbImage.cpp  UI.cpp  Window.cpp  main.cpp
web/: shell.html
